--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,11 +1,3 @@
-/*colors*/
-$primary : #fc0;
-$darkText: #232323;
-$lightText: #aeaeae;
-$greyBlock: #f8f8f8;
-$darkBlock: #282828;
-$greyBorder: #f1f1f1;
-
 .footer {
     background: $greyBlock;
     margin-top: 100px;
@@ -100,18 +92,15 @@ $greyBorder: #f1f1f1;
         @include media-breakpoint-down(sm){
             max-width: 216px;
         }
+        @media all and (max-width: 660px){
+            margin: 0 auto;
+        }
         &-title {
-            font-size: 34px;
-            font-weight: 500;
-            color: $darkText;
-            line-height: 40px;
             padding-bottom: 30px;
-            @media all and (max-width: 960px){
-                font-size: 30px;
-                line-height: 1.2;
-            }
             @include media-breakpoint-down(xs) {
-                font-size: 24px;
+                text-align: center;
+            }
+            @media all and (max-width: 660px){
                 text-align: center;
             }
         }
@@ -141,6 +130,9 @@ $greyBorder: #f1f1f1;
                 @include media-breakpoint-down(md) {
                     flex-direction: column;
                     align-items: flex-start;
+                }
+                @media all and (max-width: 768px){
+                    align-items: center;
                 }
             }
             
