--- a/src/templates/components/footer.twig
+++ b/src/templates/components/footer.twig
@@ -21,7 +21,7 @@
         </ul>
       </nav>
      <div class="footer__right">
-        <div class="footer__right-title">Контакты</div>
+        <div class="footer__right-title general-title">Контакты</div>
         <div class="footer__right-contacts">
         <div class="footer__right-contacts-top">
           
@@ -41,7 +41,7 @@
         </div>
         <div class="footer__right-contacts-bottom">
           <div class="footer-button-wrapper">
-            <button class="footer-buton" data-toggle="modal" data-target="#exampleModalCenter">Вызвать замерщика</button>
+            <button class="footer-buton" data-toggle="modal" data-target="#ModalCenter">Вызвать замерщика</button>
           </div>
 
           <div class="footer-socials">
@@ -88,22 +88,22 @@
                 </div>
                 <div class="payments-icons">
                     <div class="payment-item">
-                        <img src="..\assets\img\visa.svg" alt="Visa">
+                        <img src="{{ base_path ~ directory }}assets/img/visa.svg" alt="Visa">
                     </div>
                     <div class="payment-item">
-                        <img src="..\assets\img\master-card.svg" alt="Master-card">
+                        <img src="{{ base_path ~ directory }}assets/img/master-card.svg" alt="Master-card">
                     </div>
                     <div class="payment-item">
-                        <img src="..\assets\img\mir.svg" alt="Mir">
+                        <img src="{{ base_path ~ directory }}assets/img/mir.svg" alt="Mir">
                     </div>
                     <div class="payment-item">
-                        <img src="..\assets\img\yandex.svg" alt="Yandex">
+                        <img src="{{ base_path ~ directory }}assets/img/yandex.svg" alt="Yandex">
                     </div>
                     <div class="payment-item">
-                        <img src="..\assets\img\paypal.svg" alt="Paypal">
+                        <img src="{{ base_path ~ directory }}assets/img/paypal.svg" alt="Paypal">
                     </div>
                     <div class="payment-item">
-                        <img src="..\assets\img\robokassa.svg" alt="Robokassa">
+                        <img src="{{ base_path ~ directory }}assets/img/robokassa.svg" alt="Robokassa">
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
 
 
 
-<div class="modal fade popup_form" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade popup_form" id="ModalCenter" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
         <button type="button" class="close form_close" data-dismiss="modal" aria-label="Close">
@@ -138,6 +138,15 @@
   
   <div class="mobile-menu-inner">
     <div class="menu_close"></div>
+
+    <div class="site_search_wrapper">
+      <div class="search-form">
+        <form action="">
+          <input type="text" name="search" placeholder="Поиск по сайту" class="search-field">
+          <button class="search_button" type="submit"></button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 </div> <!--site-wrapper-->
