--- a/src/templates/components/main_content.twig
+++ b/src/templates/components/main_content.twig
@@ -13,37 +13,37 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-1.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-1.jpg" alt="Slide_image">
             </div> 
           </div>
           <div class="carousel-item">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-2.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-2.jpg" alt="Slide_image">
             </div>
           </div>
           <div class="carousel-item">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-3.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-3.jpg" alt="Slide_image">
             </div>
           </div>
           <div class="carousel-item">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-4.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-4.jpg" alt="Slide_image">
             </div>
           </div>
           <div class="carousel-item">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-5.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-5.jpg" alt="Slide_image">
             </div>
           </div>
           <div class="carousel-item">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-6.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-6.jpg" alt="Slide_image">
             </div>
           </div>
           <div class="carousel-item">
             <div class="w-100 slider-item">
-              <img src="../assets/img/slide-7.jpg" alt="Slide_image">
+              <img src="{{ base_path ~ directory }}assets/img/slide-7.jpg" alt="Slide_image">
             </div>
           </div>
         </div>
@@ -58,15 +58,15 @@
 
     <main class="site-main">
         <div class="container main-folders">
-          <div class="folders-title">Каталог дверей</div>
+          <div class="folders-title general-title">Каталог дверей</div>
           <div class="row">
             <div class="col-12 col-sm-6 col-md-4 folder_wrapper">
               <div class="folder-item">
                 <div class="folder_name">Арки и порталы</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-1.png" alt="Арки и порталы">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-1.png" alt="Арки и порталы">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -74,9 +74,9 @@
               <div class="folder-item">
                 <div class="folder_name">Межкомнатные двери</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-2.jpg" alt="Межкомнатные двери">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-2.jpg" alt="Межкомнатные двери">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -84,9 +84,9 @@
               <div class="folder-item">
                 <div class="folder_name">Входные двери</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-3.jpg" alt="Входные двери">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-3.jpg" alt="Входные двери">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -94,9 +94,9 @@
               <div class="folder-item">
                 <div class="folder_name">ПВХ (гармошка)</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-4.jpg" alt="ПВХ (гармошка)">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-4.jpg" alt="ПВХ (гармошка)">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -104,9 +104,9 @@
               <div class="folder-item">
                 <div class="folder_name">Стекянные двери</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-5.jpg" alt="Стекянные двери">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-5.jpg" alt="Стекянные двери">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -114,9 +114,9 @@
               <div class="folder-item">
                 <div class="folder_name">Для ванны и туалета</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-6.jpg" alt="Для ванны и туалета">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-6.jpg" alt="Для ванны и туалета">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -124,9 +124,9 @@
               <div class="folder-item">
                 <div class="folder_name">Раздвижные двери</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-7.png" alt="Раздвижные двери">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-7.png" alt="Раздвижные двери">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -134,9 +134,9 @@
               <div class="folder-item">
                 <div class="folder_name">Двойные двери</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-8.jpg" alt="Двойные двери">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-8.jpg" alt="Двойные двери">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -144,9 +144,9 @@
               <div class="folder-item">
                 <div class="folder_name">Складные двери</div>
                 <div class="products-in">15 товаров</div>
-                <picture class="folder-image">
-                  <img src="../assets/img/door-9.jpg" alt="Складные двери">
-                </picture>
+                <div class="folder-image">
+                  <img src="{{ base_path ~ directory }}assets/img/door-9.jpg" alt="Складные двери">
+                </div>
                 <a href="#" class="folder_link"></a>
               </div>
             </div>
@@ -161,7 +161,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-1.svg" alt="Цена от производителя">
+                    <img src="{{ base_path ~ directory }}assets/img/features-1.svg" alt="Цена от производителя">
                   </div>
                   <div class="features-title">Цена от производителя</div>
                   <div class="features-text">Мы являемся официальными дилерами производителей</div>
@@ -170,7 +170,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-2.svg" alt="Огромный выбор">
+                    <img src="{{ base_path ~ directory }}assets/img/features-2.svg" alt="Огромный выбор">
                   </div>
                   <div class="features-title">Огромный выбор</div>
                   <div class="features-text">В наших магазинах двери самых популярных производителей</div>
@@ -179,7 +179,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-3.svg" alt="Комплексный подход">
+                    <img src="{{ base_path ~ directory }}assets/img/features-3.svg" alt="Комплексный подход">
                   </div>
                   <div class="features-title">Комплексный подход</div>
                   <div class="features-text">Не только продадим вам двери, но и доставим, и установим, и дадим гарантию</div>
@@ -188,7 +188,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-4.svg" alt="Бесплатный замер">
+                    <img src="{{ base_path ~ directory }}assets/img/features-4.svg" alt="Бесплатный замер">
                   </div>
                   <div class="features-title">Бесплатный замер</div>
                   <div class="features-text">Профессиональный замерщик сделает необходимые замеры и поможет выбрать нужную дверь</div>
@@ -197,7 +197,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-5.svg" alt="Бесплатная доставка">
+                    <img src="{{ base_path ~ directory }}assets/img/features-5.svg" alt="Бесплатная доставка">
                   </div>
                   <div class="features-title">Бесплатная доставка</div>
                   <div class="features-text">По Москве в пределах МКАД при заказе от 4х дверей</div>
@@ -206,7 +206,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-6.svg" alt="Гарантия 1 год">
+                    <img src="{{ base_path ~ directory }}assets/img/features-6.svg" alt="Гарантия 1 год">
                   </div> 
                   <div class="features-title">Гарантия 1 год</div>
                   <div class="features-text">Мы даем гарантию 1 год на установку дверей</div>
@@ -220,7 +220,7 @@
         <div class="row">
           <div class="col-12 col-lg-8 content-outer">
               <div class="main-text">
-                <h1>Интернет-магазин дверей</h1>
+                <h1 class="general-title">Интернет-магазин дверей</h1>
                 <h2>Двери с доставкой по Москве!</h2>
                 <p>
                   Розница фабрики «Браво» представлена интернет-магазином и фирменными салонами в Москве, Санкт-Петербурге, Нижнем Новгороде и Рязани. Мы осуществляем доставку по всей территории Российской Федерации. В городах присутствия доставка возможна на следующий день.
@@ -235,27 +235,27 @@
             </div>
           <div class="col-12 col-lg-4 content-outer">
             <div class="news-wrapper">
-              <div class="news-title">Новости</div>
+              <div class="news-title general-title">Новости</div>
               <div class="news-list">
                 <div class="news-item">
                   <div class="date">10 июля 2020 г.</div>
-                  <div class="news-anonce">
+                  <a href="#" class="news-anonce">
                     Ура у нас новый сайт, тестовое наполнение блока новостей, редактируемый текст
-                  </div>
+                  </a>
                 </div>
 
                 <div class="news-item">
                   <div class="date">10 июля 2020 г.</div>
-                  <div class="news-anonce">
+                  <a href="#" class="news-anonce">
                     Ура у нас новый сайт, тестовое наполнение блока новостей, редактируемый текст
-                  </div>
+                  </a>
                 </div>
 
                 <div class="news-item">
                   <div class="date">10 июля 2020 г.</div>
-                  <div class="news-anonce">
+                  <a href="#" class="news-anonce">
                     Ура у нас новый сайт, тестовое наполнение блока новостей, редактируемый текст
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
