--- a/src/templates/layouts/default.twig
+++ b/src/templates/layouts/default.twig
@@ -8,7 +8,7 @@
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="icon" type="image/svg+xml" href="../assets/img/favicon.svg">
     <link rel="stylesheet" href="css/main.css">
   </head>
 
