--- a/src/templates/pages/market.twig
+++ b/src/templates/pages/market.twig
@@ -1,10 +1,10 @@
 {% extends '../layouts/default.twig' %}
-{% set head_title = 'Main' %}
+{% set head_title = 'Market' %}
 
 {% block page %}
     {% include '../components/header.twig' %}
     
-    {% include '../components/main_content.twig' %}
+    {% include '../components/market_content.twig' %}
 
     {% include '../components/footer.twig' %}
 {% endblock %}
